--- a/src/JAM.Netduino3.App/Resources.resx
+++ b/src/JAM.Netduino3.App/Resources.resx
@@ -112,12 +112,22 @@
     <value>2.0</value>
   </resheader>
   <resheader name="reader">
-    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <resheader name="writer">
-    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="ScriptsJqueryJs" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>resources\scripts\jquery.js;System.String, mscorlib, Version=4.1.2821.0, Culture=neutral, PublicKeyToken=null;utf-8</value>
+  </data>
+  <data name="ScriptsKnockoutJs" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>resources\scripts\knockout.js;System.String, mscorlib, Version=4.1.2821.0, Culture=neutral, PublicKeyToken=null;utf-8</value>
+  </data>
   <data name="String1" xml:space="preserve">
     <value>Hello World!</value>
+  </data>
+  <data name="TestHtml" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>resources\test.html;System.String, mscorlib, Version=4.1.2821.0, Culture=neutral, PublicKeyToken=null;Windows-1252</value>
   </data>
 </root>
